[package]
name = "avltriee"
version = "0.38.0"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "Customized version of AVLTree library.Process the same value in the third branch. One data is immovable from one row, and positional relationships such as left, right, and parent are all referenced by row numbers. No search is required for value reference by specifying a row."

repository = "https://github.com/OdenShirataki/avltriee"

keywords = ["avltree","database"]
categories = ["algorithms"]

license = "MIT/Apache-2.0"

[dev-dependencies]
rand = "0.8"